Banner - fix issue with overflow swiper

--- a/assets/scss/blocks/_banner.scss
+++ b/assets/scss/blocks/_banner.scss
@@ -6,6 +6,7 @@
     &__swiper {
         height: 30rem;
         position: relative;
+        overflow-x: hidden;
     }
 
     .swiper {
